--- a/changelog.mdx
+++ b/changelog.mdx
@@ -28,11 +28,11 @@ Check out our [new engineering blog post](https://chalk.ai/blog/symbolic-python-
 
 ## March 26, 2025
 
-## Case study with Apartment List—a thriving apartment rental marketplace transforming search with real-time personalization
+### Case study with Apartment List—a thriving apartment rental marketplace transforming search with real-time personalization
 
 [With Chalk, Apartment List](https://chalk.ai/customers/apartment-list) delivers instant apartment recommendations with real-time price and location flexing, dynamically adapting to user behavior while making low-latency calls to third-party services for the most current pricing information.
 
-## Chalk developer experience improvements
+### Chalk developer experience improvements
 
 Added store_offline and store_online overrides for features with max staleness, making it easy to exclude features from being persisted, particularly helpful for intermediate features that do not need to be saved e.g. very long text.
 
@@ -55,7 +55,7 @@ Chalk's Data Explorer now displays the source of each feature e.g. "Live Resolve
 
 ## March 14, 2025
 
-## Breaking changes to Chalk Client's Go SDK (1.2.0)
+### Breaking changes to Chalk Client's Go SDK (1.2.0)
 
 Released [v1.2.0 of the Chalk Go Client](https://github.com/chalk-ai/chalk-go/releases/tag/v1.2.0) which introduces some breaking changes, most notably:
 - The [gRPC implementation of Client](https://docs.chalk.ai/docs/query-overview#running-queries-using-g-rpc) is removed and replaced with a consolidated NewGRPCClient constructor--onfiguration remains mostly unchanged.
