unique titles for fraud tutorial

--- a/fraud-1.mdx
+++ b/fraud-1.mdx
@@ -1,5 +1,6 @@
 ---
 title: Fraud Detection on Chalk Tutorial
+metaTitle: "Tutorial: Fraud Detection"
 description: Build a feature pipeline for fraud detection.
 published: true
 ---
