--- a/fraud-2.mdx
+++ b/fraud-2.mdx
@@ -1,5 +1,6 @@
 ---
 title: Data Modeling
+metaTitle: "Tutorial: Data Modeling"
 description: Defining the features that we want to compute.
 published: true
 ---
