--- a/fraud-3.mdx
+++ b/fraud-3.mdx
@@ -1,5 +1,6 @@
 ---
 title: SQL Resolvers
+metaTitle: "Tutorial: SQL Resolvers"
 description: Mapping data from SQL sources to feature classes.
 published: true
 ---
