--- a/fraud-4.mdx
+++ b/fraud-4.mdx
@@ -1,5 +1,6 @@
 ---
 title: Python Resolvers
+metaTitle: "Tutorial: Python Resolvers"
 description: Define resolvers in Python that call APIs and compute derived features.
 published: true
 ---
