--- a/fraud-5.mdx
+++ b/fraud-5.mdx
@@ -1,5 +1,6 @@
 ---
 title: Inference
+metaTitle: "Tutorial: Inference"
 description: Integrate Chalk into your production decisioning systems.
 published: true
 ---
