tag for indexing

--- a/aws.mdx
+++ b/aws.mdx
@@ -1,6 +1,7 @@
 ---
 title: Amazon Web Services
-description:
+description: Setup your AWS integration
+published: true
 ---
 
 import { AwsIntegration } from '@/components/shared/aws'
