--- a/background-persistence-installation.mdx
+++ b/background-persistence-installation.mdx
@@ -1,6 +1,7 @@
 ---
 title: Chalk Dataplane Installation (Background Persistence)
 description: Background Persistence Installation Via the UI
+published: true
 ---
 
 import {
