--- a/billing.mdx
+++ b/billing.mdx
@@ -1,6 +1,7 @@
 ---
 title: Chalk Billing
 description: Learn about Chalk's billing model and how to optimize costs.
+published: true
 ---
 
 Chalk charges for machine uptime of nodes labeled as `Chalk Managed`. We calculate this by
