--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,7 @@ title: Changelog
 metaTitle: Chalk Product Changelog
 metaDescription: Chalk's latest updates.
 description: Updates to Chalk!
+published: true
 ---
 
 ## April 21, 2025
