--- a/databricks.mdx
+++ b/databricks.mdx
@@ -1,6 +1,7 @@
 ---
 title: Databricks
 description: Integrate with Databricks.
+published: true
 ---
 
 import { getEnvironmentVariableText, getNamedIntegrationText } from "@/components/NamedIntegration";
