--- a/debugging-errors.mdx
+++ b/debugging-errors.mdx
@@ -1,6 +1,7 @@
 ---
 title: Common Errors
 description: Learn techniques for debugging different elements of Chalk.
+published: true
 ---
 
 We've compiled some common errors that people come across, as well as some approaches to debug these errors
