--- a/debugging-queries.mdx
+++ b/debugging-queries.mdx
@@ -1,6 +1,7 @@
 ---
 title: Debugging Queries
 description: Learn techniques for debugging online and offline queries
+published: true
 ---
 
 import {
