--- a/gcp-cloud-deployment.mdx
+++ b/gcp-cloud-deployment.mdx
@@ -1,6 +1,7 @@
 ---
 title: GCP Cloud Deployment
 description: How to deploy Chalk to GCP.
+published: true
 ---
 
 import { ServiceDiagramSwitcher } from '@/components/ArchitectureDiagram'
