--- a/generic.mdx
+++ b/generic.mdx
@@ -1,6 +1,7 @@
 ---
 title: Custom Data Source
 description: Integrate with any data source you use.
+published: true
 ---
 
 import { TipBad, TipGood } from '@/components/Tip'
