--- a/has-many.mdx
+++ b/has-many.mdx
@@ -1,6 +1,7 @@
 ---
 title: Has Many
 description: Define one-to-many and many-to-many relationships between feature classes.
+published: true
 ---
 
 import { PyDiffEditor } from '@/components/Editor'
