--- a/has-one.mdx
+++ b/has-one.mdx
@@ -1,6 +1,7 @@
 ---
 title: Has One
 description: Define one-to-one relationships between feature classes.
+published: true
 ---
 
 import { PyDiffEditor } from '@/components/Editor'
