--- a/integration-tests.mdx
+++ b/integration-tests.mdx
@@ -1,6 +1,7 @@
 ---
 title: Integration Tests
 description: Integration tests for Chalk resolvers
+published: true
 ---
 
 import { PyEditor } from '@/components/Editor'
