--- a/lifecycle.mdx
+++ b/lifecycle.mdx
@@ -3,6 +3,7 @@ title: Feature Development Lifecycle
 metaTitle: Feature Development Lifecycle
 metaDescription: Chalk is the fastest way to deploy new feature pipelines to production.
 description: Developing, testing, deploying, and backfilling a new feature
+published: true
 ---
 
 import { highlightedCode as integrationTest } from '@/samples/features/integration_test.py?highlight=py'
