--- a/mysql.mdx
+++ b/mysql.mdx
@@ -1,6 +1,7 @@
 ---
 title: MySQL
 description: Integrate with MySQL data sources.
+published: true
 ---
 
 import { AddMySQLIntegration } from '@/components/shared/mysql'
