--- a/named-query.mdx
+++ b/named-query.mdx
@@ -1,6 +1,7 @@
 ---
 title: Named Queries
 description: Track and manage named queries in Chalk
+published: true
 ---
 
 With Chalk [NamedQuery](/api-docs#NamedQuery) objects, you can define and version
