--- a/offline-query-timeout.mdx
+++ b/offline-query-timeout.mdx
@@ -3,6 +3,7 @@ title: Offline Query Heartbeat Timeout
 description: Learn more about debugging offline query timeouts.
 metaTitle: Offline Query Heartbeat Timeout
 metaDescription: Learn more about debugging offline query timeouts.
+published: true
 ---
 
 Offline queries can consume significant amounts of system resources. Chalk's management plane checks each
