--- a/okta-saml.mdx
+++ b/okta-saml.mdx
@@ -1,6 +1,7 @@
 ---
 title: Okta SAML SSO
 description: Setting up Okta to work with Chalk
+published: true
 ---
 
 Chalk is capable of using standard SSO providers like Google and GitHub for SSO authentication.
