--- a/online-authentication.mdx
+++ b/online-authentication.mdx
@@ -1,6 +1,7 @@
 ---
 title: Authentication
 description: Access the Chalk API.
+published: true
 ---
 
 import { CreatingAClient } from '@/components/home/CreatingAClient'
