--- a/python-resolvers.mdx
+++ b/python-resolvers.mdx
@@ -1,6 +1,7 @@
 ---
 title: Python Resolvers
 description: Specify dependencies and results of feature resolvers.
+published: true
 ---
 
 import { TipBad, TipGood } from '@/components/Tip'
