--- a/query-caching.mdx
+++ b/query-caching.mdx
@@ -2,6 +2,7 @@
 title: Caching
 metaTitle: Query Caching
 description: Override default max-staleness for individual requests.
+published: true
 ---
 
 import { RequestingFeaturesMaxFreshness } from '@/components/home/RequestingFeaturesMaxFreshness'
