--- a/query-online.mdx
+++ b/query-online.mdx
@@ -1,6 +1,7 @@
 ---
 title: Online Queries
 description: Fetch feature values via online queries
+published: true
 ---
 
 import { TipInfo } from '@/components/Tip'
