--- a/redshift.mdx
+++ b/redshift.mdx
@@ -1,6 +1,7 @@
 ---
 title: Redshift
 description: Integrate with SQL data sources.
+published: true
 ---
 
 import { getEnvironmentVariableText, getNamedIntegrationText } from "@/components/NamedIntegration";
