--- a/resolver-cron.mdx
+++ b/resolver-cron.mdx
@@ -1,6 +1,7 @@
 ---
 title: Scheduling
 description: Automate resolver runs.
+published: true
 ---
 
 import { ScheduleSampling } from '@/components/home/TemporalCorrectness'
