--- a/snapshot-tests.mdx
+++ b/snapshot-tests.mdx
@@ -1,6 +1,7 @@
 ---
 title: Snapshot Tests
 description: Snapshot testing with Chalk
+published: true
 ---
 
 Snapshot testing is an effective way of ensuring that your features are not dramatically changing
