--- a/snowflake.mdx
+++ b/snowflake.mdx
@@ -1,6 +1,7 @@
 ---
 title: Snowflake
 description: Integrate with Snowflake.
+published: true
 ---
 
 import { getEnvironmentVariableText, getNamedIntegrationText } from "@/components/NamedIntegration";
