--- a/temporal-consistency.mdx
+++ b/temporal-consistency.mdx
@@ -1,6 +1,7 @@
 ---
 title: Temporal Consistency
 description: Point-in-time queries for training data sets.
+published: true
 ---
 
 import { BackfillExample, TemporalCorrectnessBusiness } from '@/components/home/TemporalCorrectness'
