--- a/time.mdx
+++ b/time.mdx
@@ -1,6 +1,7 @@
 ---
 title: Time
 description: Manage feature timestamps and point-in-time query timestamps.
+published: true
 ---
 
 import { TipInfo } from '@/components/Tip'
