--- a/vector-search.mdx
+++ b/vector-search.mdx
@@ -2,6 +2,7 @@
 title: Nearest Neighbors (Vector Search)
 description: Find the nearest neighbors across a vector relationship
 comingSoon: true
+published: true
 ---
 
 import { TipInfo, TipBad, TipGood } from '@/components/Tip'
