--- a/best-practices.mdx
+++ b/best-practices.mdx
@@ -1,6 +1,7 @@
 ---
 title: Best Practices
 description: Learn our best practices for building and maintaining your Chalk solution
+published: true
 ---
 
 ---
