--- a/datasets.mdx
+++ b/datasets.mdx
@@ -1,6 +1,7 @@
 ---
 title: Datasets
 description: Persist and evolve offline queries over time
+published: true
 ---
 
 The Chalk [Dataset](/api-docs#Dataset) class governs metadata related to offline queries,
