--- a/okta-scim.mdx
+++ b/okta-scim.mdx
@@ -1,6 +1,7 @@
 ---
 title: Okta SCIM
 description: Setting up Okta to automatically provision and deprovision Chalk users.
+published: true
 ---
 
 Chalk implements SCIM in order to allow external
