--- a/okta.mdx
+++ b/okta.mdx
@@ -1,6 +1,7 @@
 ---
 title: Okta SSO
 description: Setting up Okta to work with Chalk
+published: true
 ---
 
 Chalk is capable of using standard SSO providers like Google and GitHub for SSO authentication. For companies that use [Okta](https://okta.com/), additional configuration is required.
