--- a/openai.mdx
+++ b/openai.mdx
@@ -1,6 +1,7 @@
 ---
 title: OpenAI
 description: Integrate with OpenAI for embedding models.
+published: true
 ---
 
 import { getEnvironmentVariableText, getNamedIntegrationText } from "@/components/NamedIntegration";
