--- a/postgresql.mdx
+++ b/postgresql.mdx
@@ -1,6 +1,7 @@
 ---
 title: PostgreSQL
 description: Integrate with SQL data sources.
+published: true
 ---
 
 import { AddPostgresIntegration } from '@/components/shared/postgres'
