--- a/query-basics.mdx
+++ b/query-basics.mdx
@@ -1,6 +1,7 @@
 ---
 title: Chalk Clients
 description: Fetch feature values via online query.
+published: true
 ---
 
 import {ClientLibraries} from "@/components/HighlightsGrid";
