--- a/security.mdx
+++ b/security.mdx
@@ -3,6 +3,7 @@ title: Security Overview
 metaTitle: Security Overview and Privacy Protection
 metaDescription: At Chalk, protecting customer data is core to our mission. We integrate security best practices into every aspect of our operations and product development.
 description: How Chalk protects your data.
+published: true
 ---
 
 import { ServiceDiagramSwitcher, NetworkArchitectureDiagram } from "@/components/ArchitectureDiagram"
