--- a/stream-sources.mdx
+++ b/stream-sources.mdx
@@ -1,6 +1,7 @@
 ---
 title: Stream Sources
 description: Consuming Kafka streams.
+published: true
 ---
 
 import { Attribute, AttributeTable } from '@/components/AttributeTable'
