--- a/training-client.mdx
+++ b/training-client.mdx
@@ -1,6 +1,7 @@
 ---
 title: Offline Queries
 description: Fetch offline feature values.
+published: true
 ---
 
 import {JupyterNotebook} from '@/components/home/Jupyter'
