--- a/webhooks.mdx
+++ b/webhooks.mdx
@@ -1,6 +1,7 @@
 ---
 title: Webhooks
 description: Handling webhooks with Chalk.
+published: true
 ---
 
 import { Attribute, AttributeTable } from '@/components/AttributeTable'
