--- a/sql-resolvers.mdx
+++ b/sql-resolvers.mdx
@@ -63,7 +63,7 @@ function. For SQL file resolvers, these parameters are specified in the comments
 -- resolves: User
 
 -- These parameters are optional in all SQL file resolvers
--- kind: online <-- default is "online," but can also be "offline" or "streaming"
+-- type: online <-- default is "online," but can also be "offline" or "streaming"
 -- incremental: <-- read more about incremental resolvers here: https://docs.chalk.ai/docs/sql#incremental-queries
 --   mode: row
 --   lookback_period: 60m
