--- a/changelog.mdx
+++ b/changelog.mdx
@@ -6,6 +6,26 @@ description: Updates to Chalk!
 published: true
 ---
 
+## May 2, 2025
+
+### Retrieve historical feature values with SQL
+
+Feature values can now be retrieved from historical storage with SQL enabling direct access to previously computed values with the option to fall back to on-demand re-computation when needed.
+
+### Manage traffic spikes with per-pod rate limiting
+
+Rate limiting now supports per-pod controls through rate-per-second and concurrency parameters, enabling customers to maintain performance targets even during high traffic periods.
+The configurable limits help prevent resource exhaustion and ensure consistent application behavior under varying loads.
+
+### Quarterly product update Spring 2025
+
+We've published our [quarterly product update,](https://chalk.ai/blog/product-update-april-2025) which summarizes improvements and updates from this past Spring, including expanded Python-to-C++ compilation, selective feature persistence controls, and enhanced observability tools.
+
+### April Events Roundup
+
+We've published a recap of the various AI and data conferences our team attended in April 2025.
+The [blog post](https://chalk.ai/blog/events-roundup-april-2025) covers our participation at NexGen Banking Summit, VeloxCon, Agents & GenAI Infrastructure Summit, OptimizedAI Conference, and Data Council, including key talks and insights we shared about building infra for real-time ML at scale.
+
 ## April 21, 2025
 
 ### Presented at VeloxCon 25 (April 15-16 at Meta HQ)
