--- a/deployment.mdx
+++ b/deployment.mdx
@@ -15,7 +15,7 @@ Chalk consists of two main components:
 - A **Data Plane**, which hosts customer compute, and
 - A **Metadata Plane**, which manages deployments to the Data Plane and other orchestration responsibilities.
 
-Typically, the Chalk team deploys the Data Plane into new cloud accounts that are owned and controlled by the customer. The Metadata Plane is owned and centrally managed by Chalk: it retains no customer application data, and is responsible for orchestration and configuration management.
+Typically, the Chalk team deploys the Data Plane into new cloud accounts that are owned and controlled by the customer while the Metadata Plane is owned and centrally managed by Chalk. The Metadata plane retains no customer application data, and is responsible only for orchestration and configuration management.
 
 ## Data Plane Deployment
 
