--- a/gcp-cloud-deployment.mdx
+++ b/gcp-cloud-deployment.mdx
@@ -986,7 +986,7 @@ bigquery.models.updateTag
 
 ## Granting the Roles
 
-The following bash script can be used to grant the roles we need to deploy Chalk into your GCP project :
+The following bash script can be used to grant the permissions we need to deploy Chalk into your GCP project :
 
 ```sh
 #!/bin/bash
