--- a/gcp-cloud-deployment.mdx
+++ b/gcp-cloud-deployment.mdx
@@ -984,7 +984,7 @@ bigquery.models.export
 bigquery.models.updateTag
 ```
 
-## Granting the Roles
+## Granting Permissions
 
 The following bash script can be used to grant the permissions we need to deploy Chalk into your GCP project :
 
