--- a/gcp-cloud-deployment.mdx
+++ b/gcp-cloud-deployment.mdx
@@ -6,7 +6,7 @@ published: true
 
 import { ServiceDiagramSwitcher } from '@/components/ArchitectureDiagram'
 
-This page contains GCP specific information on Chalk deployment. A general
+This page contains GCP specific information on deploying Chalk. A general
 overview can be found on the [Deploying Chalk](/docs/deployment) page.
 
 <ServiceDiagramSwitcher default_option={"GCP"} hideSwitch />
