--- a/aws-cloud-deployment.mdx
+++ b/aws-cloud-deployment.mdx
@@ -144,7 +144,7 @@ infrastructure in your cloud account:
 
 ## Granting the Roles
 
-The following bash script can be used to grant the necessary roles to the Chalk provided service account:
+The following bash script can be used to grant the roles we need to deploy Chalk into your AWS project:
 
 ```sh
 #!/bin/bash
