--- a/deployment.mdx
+++ b/deployment.mdx
@@ -37,7 +37,7 @@ After deploying the Data Plane, we continue to monitor and update the system to 
 
 ## Post Deployment
 
-Once a Chalk Data Plane has been deployed, VPC peering is commonly added to allow private traffic between data sources in other accounts and the Data Plane. Additionally, some offline stores require additional integration steps and permissioning; we cover this in more data in [our offline store documentation](#). Adding additional data sources [is fully self-serve](#).
+Once a Chalk Data Plane has been deployed, VPC peering is commonly added to allow private traffic between data sources in other accounts and the Data Plane. Additionally, some offline stores require additional integration steps and permissioning. Adding additional data sources [is fully self-serve](/docs/integrations).
 
 ## Security Considerations
 
