--- a/deployment.mdx
+++ b/deployment.mdx
@@ -45,7 +45,7 @@ The Chalk Metadata Plane can be restricted to have write-only access to secrets 
 
 ## Ongoing Permissions
 
-Chalk’s support team will work with you to scope permissions down to the subset required for ongoing maintenance. The precise details of this process depends on the level of ongoing support that your team needs and your compliance requirements. In principle, Chalk does not require ongoing access to data or the ability to edit IAM permissions: Chalk requires ongoing access to update the software deployed in your environment.
+Chalk’s support team will work with you to scope permissions down to the subset required for ongoing maintenance. The precise details of this process depends on the level of ongoing support that your team needs and your compliance requirements. In principle, Chalk does not require ongoing access to data or the ability to edit IAM permissions. Chalk requires ongoing access to update the software deployed in your environment.
 
 ## Metadata Plane
 
